--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,12 +1,24 @@
 .checkout{
+    background-color: bisque;
     display: flex;
-    background-color:white ;
     height: max-content;
     padding: 20px;
 }
 
-.check__title{
-    border-bottom: 1px solid black;
+.checkout--left{
+    background-color: white;
+}
+
+.checkout--adv{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.checkout--title{
     padding: 10px;
-    /* margin-right: ; */
+    border-bottom: 1px solid black;
+}
+
+.checkout--right{
+    background-color: aqua;
 }
