--- a/src/Header.css
+++ b/src/Header.css
@@ -5,13 +5,18 @@
     height: 60px;
     position: sticky;
     z-index: 100;
+    text-decoration: none;
 }
 
 .header__logo{
     width: 100px;
     margin: 0 20px;
     margin-top:18px;
-    object-fit: contain;
+    /* margin-right: 20px;
+    margin-left: 10px; */
+    /* color: rgb(213,46,28); */
+    text-decoration: none;
+    outline: none;
 }
 
 .header_search{
