--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -3,6 +3,7 @@
     display: flex;
     height: max-content;
     padding: 20px;
+   
 }
 
 .checkout--left{
@@ -20,5 +21,11 @@
 }
 
 .checkout--right{
-    background-color: aqua;
+    /* background-color: white; */
+}
+
+.checkout__rcmd{
+    margin-left: 5px;
+  border-radius: 2rem;
+  background-color: white;
 }
