--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=The+Nautigal:wght@700&display=swap');
+
+
 .header{
-    background-color: black;
+    background-color:black;
     display: flex;
     align-items: center;
     height: 60px;
@@ -9,14 +12,18 @@
 }
 
 .header__logo{
-    width: 100px;
+    width: 100%;
     margin: 0 20px;
-    margin-top:18px;
+    margin-top:10px;
+    font-size: 2rem;
     /* margin-right: 20px;
     margin-left: 10px; */
-    /* color: rgb(213,46,28); */
     text-decoration: none;
-    outline: none;
+    font-family: 'Lobster', cursive;
+    font-family: 'The Nautigal', cursive;
+    background: linear-gradient(to right, #fc466b, #3f5efb);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .header_search{
@@ -30,9 +37,10 @@
     height: 14px;
     border: none;
     width: 100%;
+    margin-left: 10px;
 }
 .header__searchIcon{
-    background-color: #FAA945;
+    background-color:rgb(255,178,132);
     padding: 5px;
     height: 22px;
 }
@@ -42,7 +50,7 @@
     justify-content: space-evenly;
 }
 .header__option{
-    color: white;
+    color:white;
     display: flex;
     flex-direction: column;
     margin-left: 10px;
@@ -60,7 +68,7 @@
 }
 
 .header__optionBasket{
-    color: white;
+    color:white;
     align-items: center;
     display: flex;
 }
