--- a/src/Home.css
+++ b/src/Home.css
@@ -19,8 +19,9 @@
 }
 .home__image{
     width: 100%;
+    
     object-fit: contain;
     z-index: -1;
     margin-bottom: -200px;
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,1),rgba(0,0,0,0));
+    /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1),rgba(0,0,0,0)); */
 }
