--- a/src/Product.css
+++ b/src/Product.css
@@ -31,7 +31,7 @@
 }
 
 .product__button{
-    background-color: #F7CA00;
+    background-color: rgb(255,178,132);
     color: black;
     border: 1px solid;
     border-radius: 24px;
