--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .subtotal__gift {
